test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_array_element.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[0]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: arr
        None: 
        Array: 
          TLong: 3
          Structure: 
            TIdentifier: s
            Bool: 0
        None: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
          CMemberDeclaration: 
            TIdentifier: b
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
